[package]
name = "zingolib-native"
version = "0.1.0"
authors = ["James Katz", "ZL Viridian <zingo@zingolabs.com>"]
license = "ISC"
edition = "2021"
exclude = ["native.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zingolib = { git="https://github.com/zingolabs/zingolib", default-features=true, branch = "stable" }
zingoconfig = { git="https://github.com/zingolabs/zingolib", default-features=true, branch = "stable" }
http = "*"
lazy_static = "1.4.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6", "promise-api", "channel-api"]
