[package]
name = "zingolib-native"
version = "0.1.0"
authors = ["James Katz", "ZL Viridian <zingo@zingolabs.com>"]
license = "ISC"
edition = "2021"
exclude = ["native.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zingolib = { git="https://github.com/zingolabs/zingolib", default-features=true, branch = "dev", features=["test-elevation"] }
http = "1.1.0"
lazy_static = "1.4.0"
tokio =  { version = "1.24", features = [ "full" ] }

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6", "promise-api", "channel-api"]
